--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "19.2.1",
     "sharp": "0.34.2",
     "tailwindcss": "^4.1.18",
+    "uuid": "^13.0.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
