--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,7 @@
 services:
   app:
     image: node:22.17-alpine
-    ports:
-      - '3000:3000'
-    volumes:
-      - .:/home/node/app
-      - /home/node/app/node_modules
-      - /home/node/app/.next
     working_dir: /home/node/app/
-    command: sh -c "npm install && npm run dev"
     depends_on:
       db:
         condition: service_healthy
@@ -16,6 +9,7 @@ services:
       - .env
     networks:
       - vylety-network
+
   db:
     restart: always
     image: postgres:17-alpine
@@ -25,15 +19,15 @@ services:
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - ./data/db:/var/lib/postgresql
-    ports:
-      - '${DB_PORT}:5432'
+      - ./data/uploads:/media
     networks:
       - vylety-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME} -h localhost -p 5432"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER} -d ${DB_NAME} -h localhost -p 5432']
       interval: 10s
       timeout: 5s
       retries: 5
+
 networks:
   vylety-network:
     driver: bridge
