--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.74.0",
+    "@payloadcms/db-sqlite": "3.74.0",
     "@payloadcms/email-nodemailer": "3.74.0",
     "@payloadcms/next": "3.74.0",
     "@payloadcms/richtext-lexical": "3.74.0",
